# FaceRecognitionDemo-Android

camera_android/: local.properties
camera_android/app/: build.gradle  ncnn.md
camera_android/app/keystore/: demoKeystore.jks
camera_android/app/src/main/: AndroidManifest.xml
camera_android/app/src/main/cpp/: CMakeLists.txt  face_jni.cpp  yoloface.cpp  yoloface.h
camera_android/app/src/main/cpp/include/: platform.h
camera_android/app/src/main/java/com/ncnn/demo/: MyApplication.java
camera_android/app/src/main/java/com/ncnn/demo/detect/: FaceDetect.java  FaceInfoList.java
camera_android/app/src/main/java/com/ncnn/demo/impl/: IDetectCallback.java  IResultAction.java  OnActivityResultCallback.java
camera_android/app/src/main/java/com/ncnn/demo/init/: FaceDetectInitManager.java
camera_android/app/src/main/java/com/ncnn/demo/manager/: DetectManager.java
camera_android/app/src/main/java/com/ncnn/demo/service/: ModelService.java
camera_android/app/src/main/java/com/ncnn/demo/ui/activity/: MainActivity.java  PreviewActivity.java
camera_android/app/src/main/java/com/ncnn/demo/ui/fragment/: RequestManagerFragment.java  (+1 more)
camera_android/app/src/main/java/com/ncnn/demo/util/: FaceFileUtils.java  ImageUtils.java
camera_android/app/src/main/java/com/ncnn/demo/widget/: MyCameraView.java
camera_android/app/src/main/res/drawable/: ic_mask.xml
camera_android/app/src/main/res/layout/: activity_main.xml  activity_preview.xml
camera_android/app/src/main/res/values/: strings.xml  styles.xml
camera_android/gradle/wrapper/: gradle-wrapper.properties
